# linux-embedded-hal

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  bors.toml
.github/workflows/: ci.yml  clippy.yml
ci/: install.sh  script.sh
examples/: gpio-wait.rs  transactional-i2c.rs
src/: cdev_pin.rs  delay.rs  i2c.rs  lib.rs  serial.rs  serial_impl.rs  spi.rs  sysfs_pin.rs  timer.rs
