[package]
authors = [
    "The Embedded Linux Team <embedded-linux@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>"
]
categories = ["embedded", "hardware-support"]
description = "Implementation of the `embedded-hal` traits for Linux devices"
keywords = ["Linux", "hal"]
license = "MIT OR Apache-2.0"
name = "linux-embedded-hal"
repository = "https://github.com/rust-embedded/linux-embedded-hal"
version = "0.4.0-alpha.1"
edition = "2018"

[features]
gpio_sysfs = ["sysfs_gpio"]
gpio_cdev = ["gpio-cdev"]
async-tokio = ["gpio-cdev/async-tokio"]

default = [ "gpio_cdev", "gpio_sysfs" ]

[dependencies]
embedded-hal = "=1.0.0-alpha.6"
gpio-cdev = { version = "0.5", optional = true }
sysfs_gpio = { version = "0.6", optional = true }

i2cdev = "0.5"
nb = "1"
serial-core = "0.4.0"
serial-unix = "0.4.0"
spidev = "0.5"

[dev-dependencies]
openpty = "0.1.0"

[dependencies.cast]
# we don't need the `Error` implementation
default-features = false
version = "0.3"
