[package]
authors = [
    "The Embedded Linux Team <embedded-linux@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>"
]
categories = ["embedded", "hardware-support"]
description = "Implementation of the `embedded-hal` traits for Linux devices"
keywords = ["Linux", "hal"]
license = "MIT OR Apache-2.0"
name = "linux-embedded-hal"
repository = "https://github.com/rust-embedded/linux-embedded-hal"
version = "0.4.0-alpha.3"
edition = "2018"

[features]
gpio_sysfs = ["sysfs_gpio"]
gpio_cdev = ["gpio-cdev"]
async-tokio = ["gpio-cdev/async-tokio"]
i2c = ["i2cdev"]
spi = ["spidev"]

default = [ "gpio_cdev", "gpio_sysfs", "i2c", "spi" ]

[dependencies]
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-nb = "=1.0.0-alpha.3"
gpio-cdev = { version = "0.5.1", optional = true }
sysfs_gpio = { version = "0.6.1", optional = true }
i2cdev = { version = "0.5.1", optional = true }
nb = "1"
serialport = { version = "4.2.0", default-features = false }
spidev = { version = "0.5.2", optional = true }
nix = "0.23.1"

[dev-dependencies]
openpty = "0.2.0"

[dependencies.cast]
# we don't need the `Error` implementation
default-features = false
version = "0.3"
