[package]
authors = [
    "The Embedded Linux Team <embedded-linux@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>"
]
categories = ["embedded", "hardware-support"]
description = "Implementation of the `embedded-hal` traits for Linux devices"
keywords = ["Linux", "hal"]
license = "MIT OR Apache-2.0"
name = "linux-embedded-hal"
repository = "https://github.com/rust-embedded/linux-embedded-hal"
version = "0.4.0"
edition = "2018"

[features]
gpio_sysfs = ["sysfs_gpio"]
gpio_cdev = ["gpio-cdev"]
async-tokio = ["gpio-cdev/async-tokio", "dep:embedded-hal-async", "tokio/time"]
i2c = ["i2cdev", "nix"]
spi = ["spidev"]
serial = ["serialport", "embedded-hal-nb"]

default = [ "gpio_cdev", "gpio_sysfs", "i2c", "spi", "serial" ]

[dependencies]
embedded-hal = "1"
embedded-hal-nb = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }
gpio-cdev = { version = "0.6.0", optional = true }
sysfs_gpio = { version = "0.6.1", optional = true }
i2cdev = { version = "0.6.0", optional = true }
nb = "1"
serialport = { version = "4.2.0", default-features = false, optional = true }
spidev = { version = "0.6.0", optional = true }
nix = { version = "0.27.1", optional = true }
tokio = { version = "1", default-features = false, optional = true }

[dev-dependencies]
openpty = "0.2.0"

[dependencies.cast]
# we don't need the `Error` implementation
default-features = false
version = "0.3"
